--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,9 @@
 management.endpoint.jmx.exposure=*
 
+spring.datasource.username=SA
+spring.datasource.password=12345OHdf%e
+spring.datasource.url=jdbc:sqlserver://localhost;databaseName=ecommerce;encrypt=true;trustServerCertificate=true
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.hibernate.ddl-auto=update
+
+
